# loop-antigravity

./: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
loop_antigravity/: __init__.py  agy_client.py  backend_protocol.py  backend_selector.py  billing_tracker.py  circuit_breaker.py  cli.py  config.py  context_packer.py  gcloud_auth.py  gemini_sdk_client.py  multimodal_handler.py  mvp_helloworld.py  phase_dispatcher.py  state_manager.py  verify_agy_flags.py
tests/: __init__.py  conftest.py  test_agy_client.py  test_backend_protocol.py  test_backend_selector.py  test_billing_tracker.py  test_circuit_breaker.py  test_config.py  test_context_packer.py  test_edge_cases.py  test_gcloud_auth.py  test_gemini_sdk_client.py  test_integration.py  test_multimodal_handler.py  test_mvp.py  test_phase_dispatcher.py  test_state_manager.py  test_verify_agy_flags.py
